kube/kongfood-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kongfood
  labels:
    app: kongfood
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kongfood
  template:
    metadata:
      labels:
        app: kongfood
    spec:
      containers:
        - name: app
          image: marcusaferreira94/kongfood:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
