kube/kongfood-hpa.yaml
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
 name: kongfood-hpa
spec:
 scaleTargetRef:
  apiVersion: apps/v1
  kind: Deployment
  name: kongfood
 minReplicas: 2
 maxReplicas: 4
 metrics:
  - type: Resource
    resource:
     name: cpu
     target:
      type: Utilization
      averageUtilization: 75
