kube/kongfood-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kongfood
spec:
  selector:
    app: kongfood
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
