kube/kongfood.yaml
apiVersion: v1
kind: Service
metadata:
  name: kongfood
spec:
  selector:
    app: kongfood
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kongfood
  labels:
    app: kongfood
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kongfood
  template:
    metadata:
      labels:
        app: kongfood
    spec:
      containers:
        - name: kongfood
          image: marcusaferreira94/kongfood:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
